// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.system;

import "floecat/common/common.proto";
import "floecat/common/predicate.proto";

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.system.rpc";
option java_outer_classname = "SystemScanFlightProto";

/**
 * Encoded into FlightDescriptor.command by workers calling getFlightInfo.
 *
 * All system-table Flight producers (Floecat and STORAGE services) must accept
 * this message in FlightDescriptor.command. Services that do not yet need
 * predicates or projection can decode the message and ignore unused fields.
 *
 * Semantics (mirror the gRPC ScanSystemTable contract):
 *   - required_columns empty  → full schema returned
 *   - unknown column names    → silently dropped (no error)
 *   - duplicates in required_columns → de-duplicated preserving first occurrence
 *   - column ordering         → follows required_columns ordering
 *   - unknown predicate columns    → produce zero matches (conservative)
 *   - unknown predicate operators  → INVALID_ARGUMENT error
 *
 * query_id is optional and for correlation/logging only. Producers must NOT
 * depend on it for correctness or auth.
 */
message SystemTableFlightCommand {
  /** System table to scan. Required. */
  ai.floedb.floecat.common.ResourceId table_id = 1;

  /** Optional query correlation id for logging/tracing. Must not affect results. */
  string query_id = 2;

  /** Optional column projection. Empty means all columns. */
  repeated string required_columns = 3;

  /** Optional row-level filters. Empty means no filtering. */
  repeated ai.floedb.floecat.common.Predicate predicates = 4;
}

/**
 * SERVER-INTERNAL ONLY. Never constructed or inspected by workers.
 *
 * Opaque bytes round-tripped through Arrow Flight Ticket. Workers receive
 * this as Ticket.bytes from getFlightInfo and pass it unchanged to getStream.
 */
message SystemTableFlightTicket {
  /** Schema version for future extensibility. */
  uint32 version = 1;

  /** Serialised SystemTableFlightCommand bytes. */
  bytes cmd = 2;
}
